# real-estate-marketplace

./: Anchor.toml  Cargo.toml  README.md  diesel.toml_backup  file.rs  keypair-convertor.js  package-lock.json  package.json  server.js  sigOnly.js
app/: .env  .env.example  README.md  index.html  package-lock.json  package.json  run.ps1  tailwind.config.js  vercel.json  vite.config.ts  vite.config.ts.timestamp-1743741113763-dc5d97c50bbcb.mjs
app/components/: ExecuteSaleModal.tsx
app/components/ui/: spinner.tsx
app/src/: App.tsx  index.css  main.tsx
app/src/components/: ConnectWalletButton.tsx  ExecuteSaleModal.tsx  FilterSection.tsx  Layout.tsx  MakeOfferModal.tsx  Modal.tsx  Navbar.tsx  OfferForm.tsx  Pagination.tsx  PropertyCard.tsx  PropertyDetail.tsx  PropertyDetailModal.tsx  PropertyForm.tsx  PropertyGrid.tsx  PropertyOffersTable.tsx  RespondToOfferModal.tsx  UpdatePropertyForm.tsx  UpdatePropertyModal.tsx  WalletConnectButton.tsx
app/src/context/: PropertyContext.tsx  WalletContext.tsx
app/src/contexts/: AuthContext.tsx
app/src/hooks/: useAuth.ts  useProperties.ts  usePropertyActions.ts  useSolanaWallet.ts  useWallet.ts
app/src/idl/: real_estate_marketplace.json
app/src/lib/: api.ts  auth.ts  db.ts  mockData.ts  router.tsx  utils.ts  wallet.ts
app/src/pages/: Marketplace.tsx  MyOffers.tsx  MyProperties.tsx  Properties.tsx  PropertyDetails.tsx  (+3 more)
backend/: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  README.md  diesel.toml  run.ps1  settings.toml  sig.js
backend/migrations/2025-03-26-131119_create_tables/: down.sql  up.sql
backend/migrations/2025-03-31-110811_create_tables/: down.sql  up.sql
backend/migrations/2025-03-31-112608_create_marketplace_table/: down.sql  up.sql
backend/migrations/2025-04-04-093048_add_nft_fields_to_properties/: down.sql  up.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  offer.rs  property.rs  schema.rs  solana.rs  transaction.rs  transactions.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/models/: mod.rs
backend/src/schema/: mod.rs
backend/src/solana/: mod.rs
backend/tests/: anchor_list_property.js  check_all_marketplaces.js  check_marketplace.js  frontend_anchor_example.js  generate_transaction.js  initialize_marketplace.js  list_property_payload.json  list_property_transaction.js  package-lock.json  package.json  simple_list_property_test.js  simple_payload.json  simple_system_transfer.js  simple_transaction.js  simple_transfer.js  system_transaction.js  system_transfer_payload.json  test_complete_flow.js  test_transaction_api.js  transaction_payload.json  transfer_payload.json
programs/real-estate-marketplace/: Cargo.toml  ReadME.md
programs/real-estate-marketplace/src/: lib.rs
tests/: real-estate-marketplace.ts
(+16 files in other folders)
