[package]
name = "real-estate-marketplace-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
tokio = { version = "1", features = ["full"] }
solana-rpc-client = "1.18"
solana-sdk = "1.18"
anchor-lang = "0.30.1"
anchor-client = "0.30.1"
config = "0.14"
log = "0.4"
env_logger = "0.11"
chrono = "0.4.40"
jsonwebtoken = "9.3"
dotenv = "0.15"
bs58 = "0.5"
bincode = "1.3"
spl-token = "4.0"
spl-associated-token-account = "2.0"
borsh = "1.5" 