[package]
name = "real-estate-marketplace-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
tokio = { version = "1.38.0", features = ["full"] }
anchor-client = "0.30.1"
solana-client = "~1.18.0"
solana-sdk = "~1.18.0"
solana-transaction-status = "~1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
bs58 = "0.5"
chrono = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.22.1"
bincode = "1.3.3"  # Added for transaction deserialization
thiserror = "1.0"

[dev-dependencies]
diesel_migrations = "2.1.0"